# PicoMini

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
PicoMini/: CMakeCache.txt  Makefile  cmake_install.cmake  main
